[package]
name = "work_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
ansi_term = "0.12.1"
regex = "1.9.5"
lazy_static = "1.4.0"
anyhow = "1.0.75"
fancy-regex = "0.11.0"
